# OSG_playground

./: CMakeLists.txt  CMakePresets.json  README.md  output4kimg.cpp  vcpkg-configuration.json
rendering_relative_to_eye/: solution.cpp
src/fixed_star/: fixed_star.cpp
src/render_to_tex/: to_smaller_tex.cpp
src/rendering_relative_to_eye/: artifact.cpp
src/rgba_lightness/: rgba_lightness.cpp
src/satellite/: satellite.cpp
